--- a/Recipe-Book/recipe.css
+++ b/Recipe-Book/recipe.css
@@ -12,6 +12,10 @@ body {
 }
 
 p {
+    font-size: 2opx;
+}
+
+h3 {
     font-size: 25px;
 }
 
@@ -35,6 +39,13 @@ p {
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.bookStyling .backdropAlt {
+    position: absolute;
+    height: 150%;
+    width: 50%;
+    aspect-ratio: 317/416;
 }
 
 header {
@@ -83,7 +94,7 @@ header {
 }
 
 .size-full {
-    width: 100%;
+    width:100%;
     height: 100%;
 }
 
@@ -129,8 +140,8 @@ header {
 }
 
 .part {
-    background-color: red;
-    opacity: 40%;
+    opacity: 1;
+    
 }
 
 .part2 {
@@ -141,8 +152,19 @@ header {
 .bookStyling > section {
     width: 100%;
     height: 100%;
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 150%;
+    max-height: 150%;
+    word-wrap: break-word;
+    z-index: 2;
+}
+
+/* ------------- */
+
+.bookStyling .coverStyling {
+    width: 55%;
+    height: 150%;
+    max-width: 150%;
+    max-height: 150%;
     word-wrap: break-word;
     z-index: 2;
 }
@@ -150,4 +172,34 @@ header {
 .bookStyling > section p {
     width: 100%;
     overflow-wrap: anywhere;
+}
+
+.bookCoverStyling {
+    line-height: 1.5 ;
+    background-clip: text;
+    background: linear-gradient(180deg, rgb(255, 228, 118), rgb(255, 204, 102));
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-stroke-width: 0.6px;
+    -webkit-text-stroke-color: rgb(87, 58, 0);
+    text-align: center;
+}
+
+.altH2Size {
+    font-size: 30px;
+}
+
+h1 {
+    font-size: 65px;
+}
+
+.fruitsImage {
+    margin-top:10%;
+    width: 100%;
+    height: 40%;
+    z-index: 4
+}
+
+.margin_left {
+    margin-left: 3%;
 }
